First changes to data model, questions now have a correct answer column while answers have a isChosen column

--- a/Mera.Quiz.API/appsettings.json
+++ b/Mera.Quiz.API/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=RSM2463\\BARBOOKSDATABASE;Database=QuizDb;Trusted_Connection=True"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=Diplomski;Trusted_Connection=True"
   },
   "AllowedHosts": "*"
 }
